[gd_scene load_steps=7 format=2]

[ext_resource path="res://item_scenes/ExplodeToadModel.tscn" type="PackedScene" id=1]
[ext_resource path="res://item_scenes/ExplodeToad.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=4]
radius = 0.113929

[sub_resource type="SphereShape" id=3]
radius = 2.0

[sub_resource type="SpatialMaterial" id=5]
emission_enabled = true
emission = Color( 1, 0.980392, 0, 1 )
emission_energy = 2.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=6]
material = SubResource( 5 )
radius = 0.05
height = 0.1
radial_segments = 8
rings = 8

[node name="ExplodeToadThrowable" type="RigidBody" groups=["throwable"]]
collision_layer = 16
collision_mask = 10
contacts_reported = 4
contact_monitor = true
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00834037, 0.161092, 0 )
shape = SubResource( 4 )

[node name="Area" type="Area" parent="."]
collision_layer = 16
collision_mask = 7

[node name="CollisionShape2" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="ExplodeToadModel" parent="." instance=ExtResource( 1 )]

[node name="CPUParticles" type="CPUParticles" parent="."]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0 )
emitting = false
amount = 100
lifetime = 5.0
one_shot = true
explosiveness = 0.85
lifetime_randomness = 0.42
mesh = SubResource( 6 )
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3( 0, -5, 0 )
initial_velocity = 5.0
linear_accel = 5.5

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_ExplodeToadThrowable_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
